Multiple sources for gallery and rss, scrollbar styles, layout changes, small fixes

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,23 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Scrollbar styles */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #5182cf #ffffff;
+}
+
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #5182cf;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
